# caricare

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  build_mac.sh  check.sh
.github/actions/setup/: action.yaml
.github/workflows/: rust.yml
caricare_native/: Cargo.toml  build_mac.sh
caricare_web/: Cargo.toml  build.sh  setup.sh
caricare_web/demo/: index.html
caricare_web/src/: lib.rs
cc-core/: Cargo.toml
cc-core/src/: error.rs  history.rs  image_cache.rs  lib.rs  object.rs  oss.rs  session.rs  setting.rs  store.rs  util.rs
cc-gui/: Cargo.toml
cc-gui/src/: app.rs  images.rs  main.rs  theme.rs
cc-gui/src/widgets/: confirm.rs  item.rs  mod.rs
cc-image-cache/: Cargo.toml
cc-image-cache/src/: lib.rs
crates/cc_core/: Cargo.toml
crates/cc_core/src/: error.rs  history.rs  image_cache.rs  lib.rs  log.rs  object.rs  oss.rs  runtime.rs  session.rs  setting.rs  store.rs  util.rs
crates/cc_files/: Cargo.toml
crates/cc_files/src/: file_format.rs  lib.rs  syntax_highlighting.rs
crates/cc_gui/: Cargo.toml
crates/cc_gui/src/: app.rs  globals.rs  lib.rs  state.rs
crates/cc_gui/src/pages/: auth.rs  main.rs
crates/cc_gui/src/theme/: design_tokens.rs  icon.rs  mod.rs
crates/cc_gui/src/widgets/: action_bar.rs  auth_history.rs  confirm.rs  file_view.rs  image_view.rs  item.rs  list.rs  list_item.rs  location_bar.rs  log_panel.rs  mod.rs  result_view.rs  status_bar.rs  thumb_item.rs  toasts.rs  top_bar.rs  transfer_panel.rs
crates/cc_images/: Cargo.toml
crates/cc_images/src/: lib.rs
crates/cc_oss/: Cargo.toml
crates/cc_oss/src/: auth.rs  errors.rs  lib.rs  object.rs  oss.rs  query.rs  service.rs  utils.rs
crates/cc_runtime/: Cargo.toml
crates/cc_runtime/src/: lib.rs
crates/cc_storage/: Cargo.toml
crates/cc_storage/src/: client.rs  config.rs  custom_layer.rs  error.rs  lib.rs  partial_file.rs  stream.rs  transfer.rs  types.rs  util.rs
crates/cc_storage/src/services/: azblob.rs  gcs.rs  mod.rs  oss.rs  s3.rs  s3_compatible.rs
crates/cc_ui/: Cargo.toml
crates/cc_ui/src/: design_tokens.rs  icon.rs  lib.rs
crates/oss_sdk/: Cargo.toml
crates/oss_sdk/src/: bucket.rs  client.rs  config.rs  conn.rs  custom_layer.rs  error.rs  lib.rs  stream.rs  transfer.rs  types.rs  util.rs
icons/: Icon.icns  make_icns.sh
src/: app.rs  globals.rs  main.rs  state.rs  util.rs
src/pages/: auth.rs  main.rs  mod.rs
src/widgets/: action_bar.rs  confirm.rs  file_view.rs  list.rs  list_item.rs  log_panel.rs  mod.rs  password.rs  status_bar.rs  tab_switcher.rs  thumb_item.rs  toasts.rs  top_bar.rs  transfer_panel.rs
