[package]
name = "caricare"
version = "0.1.0"
edition = "2021"
description = "An Alibaba Cloud Object Storage Service (OSS) browser GUI for Rust."

[package.metadata.bundle]
name = "Caricare"
identifier = "com.fireyy.caricare"
icon = ["icons/Icon.icns", "icons/Icon.iconset/icon-256.png", "icons/Icon.iconset/icon-32.png", "icons/Icon.iconset/icon-16.png"]
version = "1.0.0"
copyright = "Copyright (c) Fireyy (2021). All rights reserved."
category = "Developer Tool"
short_description = "An Alibaba Cloud Object Storage Service (OSS) browser GUI for Rust"
osx_minimum_system_version = "10.12"

[dependencies]
cc_core = { workspace = true }
cc_gui = { workspace = true }
eframe = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
authors = ["fireyy zhu <fireyy@gmail.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.67"
version = "0.1.0"

[workspace.dependencies]
cc_core = { path = "crates/cc_core" }
cc_gui = { path = "crates/cc_gui" }
eframe = { version = "0.21.3", features = ["dark-light", "persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.29"

[profile.dev]
opt-level = 1 # Make debug builds run faster

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# debug = true # good for profilers