[package]
name = "caricare"
version = "0.1.0"
edition = "2021"
description = "A simple cross-platform desktop application for Aliyun OSS(Object Storage Service). Built in Rust using egui."

[package.metadata.bundle]
name = "Caricare"
identifier = "com.fireyy.caricare"
icon = ["icons/Icon.icns", "icons/Icon.iconset/icon-256.png", "icons/Icon.iconset/icon-32.png", "icons/Icon.iconset/icon-16.png"]
version = "1.0.0"
copyright = "Copyright (c) Fireyy (2023). All rights reserved."
category = "Developer Tool"
short_description = "A simple cross-platform desktop application for Aliyun OSS(Object Storage Service)."
osx_minimum_system_version = "10.12"

[dependencies]
cc_core = { workspace = true }
# cc_gui = { workspace = true, features = ["lang-cjk"] }
cc_gui = { workspace = true }
eframe = { workspace = true }
cc_runtime = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
authors = ["fireyy zhu <fireyy@gmail.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.67"
version = "0.1.0"

[workspace.dependencies]
cc_core = { path = "crates/cc_core" }
cc_gui = { path = "crates/cc_gui" }
oss_sdk = { path = "crates/oss_sdk" }
cc_runtime = { path = "crates/cc_runtime" }
cc_files = { path = "crates/cc_files" }
eframe = { version = "0.21.3", features = ["dark-light", "persistence"] }
egui = "0.21.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.29"
once_cell = "1.15.0"
reqwest = { version = "0.11.13", default-features = false }
infer = { version = "0.11.0", default-features = false }

[profile.dev]
opt-level = 1 # Make debug builds run faster

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"