[package]
name = "caricare"
version = "0.1.0"
edition = "2021"
description = "A simple cross-platform desktop application for S3-Compatible Object Storage. Built in Rust using egui."

[package.metadata.bundle]
name = "Caricare"
identifier = "com.fireyy.caricare"
icon = ["icons/Icon.icns", "icons/Icon.iconset/icon-256.png", "icons/Icon.iconset/icon-32.png", "icons/Icon.iconset/icon-16.png"]
version = "1.0.0"
copyright = "Copyright (c) Fireyy (2023). All rights reserved."
category = "Developer Tool"
short_description = "A simple cross-platform desktop application for S3-Compatible Object Storage."
osx_minimum_system_version = "10.12"

[features]
default = ["services-s3-compatible"]
# Enable Amazon Simple Storage Service support
services-s3 = ["cc_storage/services-s3"]
# Enable Aliyun Object Storage Service support
services-oss = ["cc_storage/services-oss"]
# Enable Google Cloud Storage support
services-gcs = ["cc_storage/services-gcs"]
# Enable Azure Blob Storage support
services-azblob = ["cc_storage/services-azblob"]
# Enable S3-Compatible Object Storage support
services-s3-compatible = ["cc_storage/services-s3-compatible"]
# Enable CJK char support
lang-cjk = ["cc_ui/lang-cjk"]

[dependencies]
cc_core = { workspace = true }
cc_ui = { workspace = true }
eframe = { workspace = true }
cc_runtime = { workspace = true }
serde = { workspace = true }
egui = { workspace = true }
cc_files = { workspace = true }
egui_extras = { workspace = true }
rfd = "0.10"
egui-notify = "0.6"
tracing = { workspace = true }
cc_storage = { workspace = true }
crossbeam-channel = { workspace = true }
once_cell = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
authors = ["fireyy zhu <fireyy@gmail.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.67"
version = "0.1.0"

[workspace.dependencies]
cc_core = { path = "crates/cc_core" }
cc_ui = { path = "crates/cc_ui" }
cc_storage = { path = "crates/cc_storage" }
cc_runtime = { path = "crates/cc_runtime" }
cc_files = { path = "crates/cc_files" }
eframe = { version = "0.22.0", features = ["persistence"] }
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image", "svg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.29"
once_cell = "1.15.0"
reqwest = { version = "0.11.18", default-features = false }
infer = { version = "0.11.0", default-features = false }
crossbeam-channel = "0.5.7"

[profile.dev]
opt-level = 1 # Make debug builds run faster

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"