[package]
name = "caricare_native"
version = "0.1.0"
edition = "2021"
description = "An Alibaba Cloud Object Storage Service (OSS) browser GUI for Rust."

[package.metadata.bundle]
name = "Caricare"
identifier = "com.fireyy.caricare"
icon = ["icons/Icon.icns", "icons/icon-win-256.png", "icons/icon-win-32.png", "icons/icon-win-16.png"]
version = "1.0.0"
copyright = "Copyright (c) Fireyy (2021). All rights reserved."
category = "Developer Tool"
short_description = "An Alibaba Cloud Object Storage Service (OSS) browser GUI for Rust"
osx_minimum_system_version = "10.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc_core = { workspace = true }
cc_gui = { workspace = true }
eframe = { workspace = true }