[package]
name = "caricare_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc_core = { workspace = true }
cc_gui = { workspace = true }
eframe = { workspace = true }
wasm-bindgen = "*"
console_error_panic_hook = "0.1.7"