[package]
name = "cc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aliyun-oss-client = { version = "^0.8" }
aliyun-oss-client = { path = "../../oss-rs" }
simple_env_load = "0.2"
tracing = "0.1.29"
tracing-subscriber = "0.3.0"
md5 = "0.7"
infer = "0.11.0"