[package]
name = "cc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliyun-oss-client = "0.9.3"
simple_env_load = "0.2"
tracing = "0.1.29"
tracing-subscriber = "0.3.0"
md5 = "0.7"
infer = "0.11.0"
anyhow = "1.0.66"
flume = "0.10.14"
egui = { version = "0.19.0", default-features = false }
image = { version = "0.24.4", default-features = false, features = ["png", "jpeg", "gif"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tokio-stream = "0.1.11"
egui_extras = { version = "0.19.0", features = ["image"] }
once_cell = "1.15.0"