[package]
name = "cc-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc-core = { path="../cc-core" }
eframe = { version = "0.19.0", features = ["dark-light", "persistence"] }
egui = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }
rfd = "0.10"
bytesize = "1.1.0"
egui-modal = "0.1"