[package]
name = "cc-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc-core = { path="../cc-core" }
eframe = { version = "0.19.0", features = ["dark-light", "persistence"] }
egui = "0.19.0"
rfd = "0.10"
chrono = "0.4"