[package]
name = "cc_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# aliyun-oss-client = "0.10.1"
aliyun-oss-client = { git = "https://github.com/tu6ge/oss-rs.git", rev = "84a89cd" }
# aliyun-oss-client = { path = "../../oss-rs" }
tracing = "0.1.29"
tracing-subscriber = "0.3.0"
md5 = "0.7"
infer = "0.11.0"
anyhow = "1.0.66"
flume = "0.10.14"
egui = { version = "0.21.0", default-features = false }
image = { version = "0.24.4", default-features = false, features = ["png", "jpeg", "gif"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tokio-stream = "0.1.11"
egui_extras = { version = "0.21.0", features = ["image", "svg"] }
once_cell = "1.15.0"
bytesize = "1.1.0"
regex = "1.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
urlencoding = "2.1.0"
directories-next = "2.0.0"
chrono = "0.4"