[package]
name = "cc_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = "0.3.0"
anyhow = "1.0.66"
flume = "0.10.14"
egui = { version = "0.21.0", default-features = false }
image = { version = "0.24.4", default-features = false, features = ["png", "jpeg", "gif"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tokio-stream = "0.1.11"
egui_extras = { version = "0.21.0", features = ["image", "svg"] }
once_cell = { workspace = true }
bytesize = "1.1.0"
regex = "1.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
urlencoding = "2.1.0"
directories-next = "2.0.0"