[package]
name = "cc_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = "0.3.0"
anyhow = "1.0.66"
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
urlencoding = "2.1.0"
directories-next = "2.0.0"