[package]
name = "cc_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { workspace = true }
anyhow = "1.0.66"
serde = { workspace = true }
enum-map = { version = "2", features = ["serde"] }
infer = { workspace = true }
tracing = { workspace = true }