[package]
name = "cc_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc_core = { workspace = true }
eframe = { workspace = true }
serde = { workspace = true }
egui = { workspace = true }
cc_files = { workspace = true }
cc_runtime = { workspace = true }
egui_extras = "0.21.0"
rfd = "0.10"
egui-notify = "0.6"
tracing = { workspace = true }
oss_sdk = { workspace = true }