[package]
name = "cc_images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_extras = { version = "0.21.0", features = ["image", "svg"] }
flume = { version = "0.10.14", default-features = false, features = ["async"] }
reqwest = "0.11.13"
tokio-stream = { version = "0.1.11", default-features = false }
image = { version = "0.24.5", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
egui = { workspace = true }
cc_runtime = { workspace = true }
tokio = "1.22.0"
anyhow = "1.0.66"