[package]
name = "cc_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["services-s3-compatible"]
# Enable Amazon Simple Storage Service support
services-s3 = ["opendal/s3"]
# Enable Aliyun Object Storage Service support
services-oss = ["opendal/oss"]
# Enable Google Cloud Storage support
services-gcs = ["opendal/gcs"]
# Enable Azure Blob Storage support
services-azblob = ["opendal/azblob"]
# Enable S3-Compatible Object Storage support
services-s3-compatible = ["opendal/s3"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = { workspace = true }
bytesize = "1.1.0"
chrono = "0.4.24"
opendal = "0.31.0"
futures = "0.3"
bytes = "^1"
tokio = { version = "^1.0", features = ["fs", "io-util", "sync"] }
pin-project = "1"
crossbeam-channel = { workspace = true }
async-trait = "0.1.68"