[package]
name = "cc_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["services-s3-compatible"]
# Enable Amazon Simple Storage Service support
services-s3 = ["opendal/services-s3"]
# Enable Aliyun Object Storage Service support
services-oss = ["opendal/services-oss"]
# Enable Google Cloud Storage support
services-gcs = ["opendal/services-gcs"]
# Enable Azure Blob Storage support
services-azblob = ["opendal/services-azblob"]
# Enable S3-Compatible Object Storage support
services-s3-compatible = ["services-s3"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = { workspace = true }
bytesize = "1.1.0"
chrono = "0.4.24"
opendal = "0.33.0"
futures = "0.3"
bytes = "^1"
tokio = { version = "^1.0", features = ["fs", "io-util", "sync"] }
pin-project = "1"
crossbeam-channel = { workspace = true }
async-trait = "0.1.68"
cc_core = { workspace = true }