[package]
name = "cc_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = { workspace = true }
bytesize = "1.1.0"
chrono = "0.4.24"
opendal = { version = "0.44.2", default-features = false, features = [
    "services-azblob",
    "services-gcs",
    "services-oss",
    "services-s3",
] }
http = "0.2.9"
futures = "0.3"
bytes = "1.3"
tokio = { version = "^1.0", features = ["fs", "io-util", "sync"] }
pin-project = "1"
crossbeam-channel = { workspace = true }
cc_core = { workspace = true }
