[package]
name = "oss_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = { workspace = true }
bytesize = "1.1.0"
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
infer = { workspace = true }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
opendal = "0.30.4"
futures = "0.3"